Add single.aot for commons-compress